--- a/REE.Unpacker/REE.Unpacker/REE.Unpacker.csproj
+++ b/REE.Unpacker/REE.Unpacker/REE.Unpacker.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -54,10 +55,9 @@
     <Compile Include="FileSystem\Package\PakEntry.cs" />
     <Compile Include="FileSystem\Package\PakFlags.cs" />
     <Compile Include="FileSystem\Package\PakHash.cs" />
-    <Compile Include="FileSystem\Package\PakHashList.cs" />
+    <Compile Include="FileSystem\Package\PakList.cs" />
     <Compile Include="FileSystem\Package\PakHeader.cs" />
-    <Compile Include="FileSystem\Package\PakUnpack20.cs" />
-    <Compile Include="FileSystem\Package\PakUnpack40.cs" />
+    <Compile Include="FileSystem\Package\PakUnpack.cs" />
     <Compile Include="FileSystem\Package\PakUtils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
