--- a/REE.Packer/REE.Packer/REE.Packer.csproj
+++ b/REE.Packer/REE.Packer/REE.Packer.csproj
@@ -48,6 +48,8 @@
   <ItemGroup>
     <Compile Include="FileSystem\Compression\INFLATE.cs" />
     <Compile Include="FileSystem\Compression\ZSTD.cs" />
+    <Compile Include="FileSystem\Hashing\Murmur3.cs" />
+    <Compile Include="FileSystem\Hashing\xxHash.cs" />
     <Compile Include="FileSystem\Other\Helpers.cs" />
     <Compile Include="FileSystem\Other\Utils.cs" />
     <Compile Include="FileSystem\Package\PakEntry.cs" />
