--- a/REE.Unpacker/REE.Unpacker/REE.Unpacker.csproj
+++ b/REE.Unpacker/REE.Unpacker/REE.Unpacker.csproj
@@ -57,6 +57,8 @@
     <Compile Include="FileSystem\Compression\ZSTD.cs" />
     <Compile Include="FileSystem\Encryption\PakCipher.cs" />
     <Compile Include="FileSystem\Encryption\ResourceCipher.cs" />
+    <Compile Include="FileSystem\Hashing\Murmur3.cs" />
+    <Compile Include="FileSystem\Hashing\xxHash.cs" />
     <Compile Include="FileSystem\Other\Helpers.cs" />
     <Compile Include="FileSystem\Other\Utils.cs" />
     <Compile Include="FileSystem\Package\PakEntry.cs" />
