--- a/REE.Rom.Cryptor/REE.Rom.Cryptor/REE.Rom.Cryptor.csproj
+++ b/REE.Rom.Cryptor/REE.Rom.Cryptor/REE.Rom.Cryptor.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1576B48F-ABEB-494A-BB4C-37635A406515}</ProjectGuid>
+    <ProjectGuid>{7EA49480-D912-409E-B7D2-91ECD161AAC1}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>REE.FontsCryptor</RootNamespace>
-    <AssemblyName>REE.FontsCryptor</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <RootNamespace>REE.Rom.Cryptor</RootNamespace>
+    <AssemblyName>REE.Rom.Cryptor</AssemblyName>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>false</Deterministic>
@@ -43,11 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FileSystem\Cipher\FontCipher.cs" />
+    <Compile Include="FileSystem\Encryption\MameCipher.cs" />
     <Compile Include="FileSystem\Other\Helpers.cs" />
     <Compile Include="FileSystem\Other\Utils.cs" />
-    <Compile Include="FileSystem\Package\FontEncrypt.cs" />
-    <Compile Include="FileSystem\Package\FontDecrypt.cs" />
+    <Compile Include="FileSystem\Package\MameCrypt.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
